--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "babel-plugin-transform-class-properties": "6.22.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "react": "15.4.0",
     "react-dom": "15.4.0",
-    "semantic-ui": "2.2.10"
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
