--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,12 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
-    "react": "15.4.0",
-    "react-dom": "15.4.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
